apps/servarr/radarr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 2Gi
        storageClassName: nishir-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: network.speed.2.5g
                    operator: In
                    values:
                      - "true"
              weight: 50
      containers:
        - name: radarr
          volumeMounts:
            - name: movies-data
              mountPath: /data/movies
            - name: downloads-radarr-data
              mountPath: /downloads/radarr
              subPath: radarr
      volumes:
        - name: movies-data
          persistentVolumeClaim:
            claimName: movies-data
        - name: downloads-radarr-data
          persistentVolumeClaim:
            claimName: downloads-radarr-data
