apps/servarr/radarr/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  hostnames:
    - radarr.i.shikanime.studio
  parentRefs:
    - name: radarr
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-redirect
spec:
  hostnames:
    - radarr.i.shikanime.studio
  parentRefs:
    - name: radarr
      sectionName: http
